[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.8"
maud = { version = "0.27.0", features = ["axum"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shared = { path = "../shared" }
