[package]
name = "example_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3.83", features = ["Document", "Element", "HtmlElement", "Window"] }
shared = { path = "../../shared" }

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[features]
default = ["console_error_panic_hook"]
